--- a/RickAndMorty/RickAndMorty/Base.lproj/Main.storyboard
+++ b/RickAndMorty/RickAndMorty/Base.lproj/Main.storyboard
@@ -54,6 +54,21 @@
             </objects>
             <point key="canvasLocation" x="957.97101449275374" y="20.380434782608699"/>
         </scene>
+        <!--Characters View Controller-->
+        <scene sceneID="AYL-It-gbj">
+            <objects>
+                <viewController id="F0L-TA-LdF" customClass="CharactersViewController" customModule="RickAndMorty" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qri-V3-JNr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="w2e-qV-NmA"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hee-J7-gcW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1798" y="17"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="PII-Xj-PPB">
             <objects>
