Implement killing a character
At least one defect remains. A dead character may still show up as alive in the character view. That’s because the data is only persisted locally. This may be solved by creating the character model based on its status.

--- a/RickAndMorty/RickAndMorty/Base.lproj/Main.storyboard
+++ b/RickAndMorty/RickAndMorty/Base.lproj/Main.storyboard
@@ -126,6 +126,7 @@
                     </view>
                     <connections>
                         <outlet property="labelDeadOrAlive" destination="Mwg-Ix-QrY" id="CVr-Gz-ifE"/>
+                        <outlet property="switchDeadOrAlive" destination="mJe-ee-m13" id="veU-vw-gBH"/>
                         <outlet property="tableView" destination="dav-P2-8mb" id="JHx-0H-TUL"/>
                         <segue destination="G2d-Lc-cea" kind="show" identifier="segue_show_character" id="r56-qj-bNu"/>
                     </connections>
